<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditSightingActivity">

    <TextView
        android:id="@+id/label_edit_sighting"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:padding="5dp"
        android:text="@string/caption_label_edit_sighting"
        android:textSize="25sp"
        android:textStyle="bold"
        android:background="#BCCCEB" />

    <EditText
        android:id="@+id/edit_bird_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/label_edit_sighting"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/captione_edit_bird_name" />

    <EditText
        android:id="@+id/edit_date_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_bird_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/caption_edit_date_time" />

    <EditText
        android:id="@+id/edit_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_date_time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/caption_edit_location" />

    <EditText
        android:id="@+id/edit_notes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minHeight="90dp"
        app:layout_constraintTop_toBottomOf="@id/edit_location"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/caption_edit_notes" />

    <Button
        android:id="@+id/button_save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_notes"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/button_cancel"
        android:text="@string/caption_button_save" />

    <Button
        android:id="@+id/button_cancel"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/edit_notes"
        app:layout_constraintStart_toEndOf="@id/button_save"
        app:layout_constraintEnd_toEndOf="parent"
        android:text="@string/caption_button_cancel" />

</androidx.constraintlayout.widget.ConstraintLayout>